# ChangeLog for app-admin/sudo
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sudo/ChangeLog,v 1.224 2010/06/06 15:10:00 angelos Exp $

  06 Jun 2010; Christoph Mende <angelos@gentoo.org> sudo-1.7.2_p7.ebuild:
  amd64 stable (bug #322517)

  05 Jun 2010; Raúl Porcel <armin76@gentoo.org> sudo-1.7.2_p7.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #322517

  03 Jun 2010; Jeroen Roovers <jer@gentoo.org> sudo-1.7.2_p7.ebuild:
  Stable for HPPA (bug #322517).

  03 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> sudo-1.7.2_p7.ebuild:
  x86 stable wrt security bug #322517

*sudo-1.7.2_p7 (02 Jun 2010)

  02 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -sudo-1.7.2_p4.ebuild, +sudo-1.7.2_p7.ebuild:
  Remove old version; version bump.

  29 May 2010; Jeroen Roovers <jer@gentoo.org> sudo-1.7.2_p6.ebuild:
  Stable for HPPA (bug #321697).

  28 May 2010; Raúl Porcel <armin76@gentoo.org> sudo-1.7.2_p6.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc/x86 stable wrt #321697

  28 May 2010; Joseph Jezak <josejx@gentoo.org> sudo-1.7.2_p6.ebuild:
  Marked ppc/ppc64 stable for bug #321697.

  28 May 2010; Peter Volkov <pva@gentoo.org> sudo-1.7.2_p6.ebuild:
  amd64 stable, security bug #321697

*sudo-1.7.2_p6 (15 Apr 2010)

  15 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -sudo-1.7.2_p1.ebuild, -sudo-1.7.2_p3.ebuild, +sudo-1.7.2_p6.ebuild,
  -sudo-1.7.3_beta1.ebuild:
  Version bump and cleanup old version. Version 1.7.3_beta1 is gone because
  it is not covered by the latest two security announces.

  01 Mar 2010; Raúl Porcel <armin76@gentoo.org> sudo-1.7.2_p4.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #306865

  28 Feb 2010; Tobias Heinlein <keytoaster@gentoo.org> sudo-1.7.2_p4.ebuild:
  amd64 stable, security bug #306865

  28 Feb 2010; Jeroen Roovers <jer@gentoo.org> sudo-1.7.2_p4.ebuild:
  Stable for PPC (bug #306865).
