@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX sudo-1.7.2p1-securepath.patch 1719 RMD160 e8db558c04873de58c46cfbe0c1992a9f0832732 SHA1 0ea0d723258b8b8ca834115835f1d4c2caa6fad6 SHA256 1d7958aca43426213ab3685a012ce3667b7bc24b52a2fe7a1b8b0230db0f6141
 AUX sudo-skeychallengeargs.diff 567 RMD160 906ee43a7c2f21d1cf5130eac5c98ef0833154fd SHA1 b0efbedc72a1ed85c74ba10e343a68368e76c3e9 SHA256 dd2f4fdba26be6c3b4af15f3b6e18efa19375e1f9c579cdc2c76ee1adcce5e1d
@@ -8,13 +8,13 @@ DIST sudo-1.7.2p6.tar.gz 771148 RMD160 9122ee0da71fa8fe84f71e13d1a02173ef317937 
 DIST sudo-1.7.2p7.tar.gz 772356 RMD160 7ed1976bbce6d66939b85ce08a97c089dbeb1ec4 SHA1 0504e0d7b1d3c987e48325ec4caa6ebfe5237ff5 SHA256 07a9c83e628a088314523e558236ac3c4cb0d54d7d7093e5b3e4c8101b1a2bea
 EBUILD sudo-1.7.2_p2-r1.ebuild 6459 RMD160 c2bb35cad09bec61ae4edfd41349b8f8e8a6c113 SHA1 15e6f298104f7b3b432b153183c7b9fb8e303a92 SHA256 08d1088270ce4b29017cb0229204bdb3128e71581b68afd720a3137cb5125cfb
 EBUILD sudo-1.7.2_p6.ebuild 6855 RMD160 687a11e2ea93e46ede7aa3ddf7344dc43884de1a SHA1 3240eefbec1bd9d807c2404d372e7e96bf07b7f4 SHA256 5345373febcb329807b8cad13c10e7ab6ec9ac897176d45b4b04b9fc54677dbf
-EBUILD sudo-1.7.2_p7.ebuild 6861 RMD160 ff5969a26e0a976d4f103168cbf2ae0c3e66fd8c SHA1 1a05c4746705b9c167d16b0c9a0c7d6fad99a8dc SHA256 b56c57b8b605bc92b6b94a8eca7760baec3dd86db0dfdccc970d11248d10c16a
-MISC ChangeLog 31248 RMD160 e29b158227685c9c519c79267692679b154ec41f SHA1 19f23346c70948ca2cfa6e8255abecc0b9b55985 SHA256 4efe313159e2c7d6ee5dc1ba94f7ab5d18b8f3e791a8a9d88958ddee0cff0959
+EBUILD sudo-1.7.2_p7.ebuild 6858 RMD160 0fbbf36e50e76922733554be5a99a89b0929ccff SHA1 83ce71088583cc6d59b57f4d884931bb5ed7b650 SHA256 10c3a41490d42de446bf8344e9652e4f1b47c0be9f26de3a2ff24ed36502bafa
+MISC ChangeLog 31354 RMD160 563899d1c01e11b21ab7e5997b4fc3219de0221f SHA1 04f619baa395e67e52b11cbe6d92a11a732f9a48 SHA256 678b9dd4e2972dbd98c5ea9ad34d20d29d965cdd13808dde888c676c982cdb97
 MISC metadata.xml 434 RMD160 a713e5ffdcc2216a46f5023ab77c6e3aeed0d183 SHA1 49a31df517e1ec39344ac83c13e9fca87379d261 SHA256 87e2d9f4535e80f4ba1f73366040bb23cfb4b1f3101c0e33df73aff2e77fc13f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iF4EAREIAAYFAkwLulwACgkQmWq1bYTyC0OCBAEAh5BxEe8Kwok/GcIBNZW8tzwt
-wDm7QRY1TWCOWKy88mkA/1OxTcpCHYmuS0CWvVxqwaVfrvbBH5OxUD+ikR1N4Cqf
-=OQC3
+iEYEARECAAYFAkwMfNkACgkQcsIHjyDViGTeRQCgrZVgFA8Y5zn/mCOnqJdylYGp
+mvUAnjpvgnM/kmsMZ/rNt50twe0iolWk
+=GDKw
 -----END PGP SIGNATURE-----
