@@ -6,7 +6,7 @@ ftp://ftp.sudo.ws/pub/sudo/sudo-1.7.2p7.tar.gz
 http://www.sudo.ws/
 as-is BSD
 Allows users or groups to run commands as other users
-alpha amd64 arm hppa ia64 m68k ~ppc ~ppc64 s390 sh sparc x86 ~x86-fbsd
+alpha amd64 arm hppa ia64 m68k ppc ppc64 s390 sh sparc x86 ~x86-fbsd
 confutils eutils multilib pam portability toolchain-funcs
 pam skey offensive ldap selinux
 
