@@ -6,7 +6,7 @@ mirror://openssl/source/openssl-0.9.8o.tar.gz
 http://www.openssl.org/
 openssl
 Toolkit for SSL v2/v3 and TLS v1
-~alpha ~amd64 ~arm hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~sparc-fbsd ~x86-fbsd
+~alpha ~amd64 ~arm hppa ~ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~sparc-fbsd ~x86-fbsd
 eutils flag-o-matic multilib portability toolchain-funcs
 bindist gmp kerberos sse2 test zlib
 
