@@ -6,7 +6,7 @@ mirror://sourceforge/icewm/icewm-1.2.37.tar.gz
 http://www.icewm.org/
 GPL-2
 Ice Window Manager with Themes
-~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86
+~alpha ~amd64 ppc ~ppc64 ~sparc ~x86
 autotools eutils libtool multilib portability toolchain-funcs
 esd gnome imlib nls truetype xinerama minimal debug uclibc
 
