@@ -12,6 +12,6 @@ EBUILD icewm-1.2.32.ebuild 2510 RMD160 5106ba68874227775bc0c96ce624a90bce0ab51d 
 EBUILD icewm-1.2.33.ebuild 2509 RMD160 e25794f0f871c15741d14b14fdca82f21a76ee72 SHA1 496fa06c23a38848f22c858266f8ae11c37673e0 SHA256 ce614f0a27cc6f9e7dc27e157609a37ad6f3aced58be5d8ac5bbb0ba222da6c8
 EBUILD icewm-1.2.34.ebuild 2542 RMD160 5f01b34ae3a7d87f98437550eeef4e05defd89bd SHA1 5014e7df0f4317cc8016544969b44c676f45844a SHA256 c89588f2359e9bc55f5f76c6f61b1f653a1906aaa472de21856928002b0ae8d7
 EBUILD icewm-1.2.35.ebuild 2548 RMD160 0414de3a57b594f4809a2cbca11f6177c03e2277 SHA1 719724404af6a9420a7270f74e45773747c9466d SHA256 96cb86395ca5be9d38a8d1e23d68d79e0c78c0a9b556fc9a5ffe2d3d9935cff2
-EBUILD icewm-1.2.37.ebuild 2903 RMD160 acc899cad67a07e57103b826ee072f152e4cb494 SHA1 4c3da820571d809aec96a9d6f39daf547bc6bfeb SHA256 9ce9cf5334b16437102c57ab04f49ef996a60cacc990690d37ff71f428ae6298
-MISC ChangeLog 21439 RMD160 c65d0340fbb8cfcb67fec4d9ad669e1baeaee420 SHA1 965dbb9677acad4e9793e44fdaa611ed6f2ac08c SHA256 572af19df1f5a76a775bfb628d6e66d02c47bbc6bc68f9c02e5c1e7e6b29c14f
+EBUILD icewm-1.2.37.ebuild 2900 RMD160 561b38e3cc9d9bc62b0b3f422eb85ab58037402a SHA1 11e2caaddcb0761ab6c75799a2fc7215d31afd94 SHA256 d3dc3c6eeddadaa42d33d13bbf9e25d13111177b8270ed3dfb2cc4965e7f9447
+MISC ChangeLog 21544 RMD160 20763a6993ad1fde1af028a81b59b53faa8961fe SHA1 023f0cd4b44ad30efe173bfd384f61b88aff1971 SHA256 257cb4d884770514251dd8d443be4fbbeb3dc740d629ed9486c81e27b56f742b
 MISC metadata.xml 402 RMD160 8bade9b4bbf71a65376c80ba4492cff2acd9dd20 SHA1 d771e9460126efaeea2e7214f44a1e6ad9acaeee SHA256 d46d24046043ffdcab650808421c66fe7bb9cd8bd3fcc0823244b92fab57bfde
