@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/icewm
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/icewm/ChangeLog,v 1.140 2009/11/16 15:36:27 vostorga Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/icewm/ChangeLog,v 1.141 2010/06/07 05:06:13 josejx Exp $
+
+  07 Jun 2010; Joseph Jezak <josejx@gentoo.org> icewm-1.2.37.ebuild:
+  Marked ppc stable for bug #266700.
 
   16 Nov 2009; Víctor Ostorga <vostorga@gentoo.org> icewm-1.2.37.ebuild,
   +files/icewm-1.2.37-gnome2.patch:
